syntax="proto2";
option cc_generic_services = true;
option java_generic_services = true;
message ErrorCode{
    required uint32 error_code = 1;
}